# tetrisn-t

./: .gitignore  CHANGELOG  Cargo.toml  LICENSE  README.md
.cargo/: config.toml
core-mino/: Cargo.toml
core-mino/src/: control.rs  game.rs
core-mino/src/game/: piece.rs  player.rs  tile.rs
core-mino/src/menu/: start.rs
impl-ggez/: Cargo.toml
impl-ggez/src/: control.rs  draw_game.rs  main.rs
impl-ggez/src/menu/: inputconfig.rs
src/: board.rs  control.rs  controls.rs  game.rs  inputs.rs  main.rs  menu.rs  movement.rs  piece.rs  player.rs  tile.rs
src/game/: board.rs  piece.rs  player.rs  tile.rs
src/menu/: choosemode.rs  inputconfig.rs  menuhelpers.rs  settings.rs  start.rs
