# cargo-features = ["named-profiles"]

[package]
name = "tetrisn-t"
version = "0.1.0"
authors = ["Brian \"Catcow\" B"]
edition = "2018"


[profile.dev]
opt-level = 0
overflow-checks = false  # used in ./src/game/piece.rs when rotating and moving pieces left

[profile.release]
opt-level = 3

# [profile.opt]
# inherits = "release"
# 
# opt-level = 3
# overflow-checks = false
# debug = false
# debug-assertions = false
# lto = false
# panic = 'unwind'
# incremental = true
# codegen-units = 16
# rpath = false


[dependencies]
# ggez = "0.5"
ggez = { git = "https://github.com/Brian-Catcow-B/ggez.git", branch = "master-custom-gamepads" }
rand = "0.7.3"
gilrs = "0.7.4"