# cargo-features = ["named-profiles"]

[package]
name = "core-mino"
version = "0.2.0"
authors = ["Brian \"Catcow\" B"]
edition = "2018"

[profile.dev]
opt-level = 0
overflow-checks = false  # used in ./src/game/piece.rs when rotating and moving pieces left

[profile.release]
opt-level = 3

# [profile.opt]
# inherits = "release"
# 
# opt-level = 3
# overflow-checks = false
# debug = false
# debug-assertions = false
# lto = false
# panic = 'unwind'
# incremental = true
# codegen-units = 16
# rpath = false

[dependencies]
rand = "0.7.3"
